-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: hs21, 7
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2210015 | 7 | Tom Rodriguez | P2 | Closed | Fixed | b143 |
VM could crash while debugging.
JDK: Java(TM) SE Runtime Environment (build 1.7.0-ea-b141)
VM: Java HotSpot(TM) Client VM (build 21.0-b12-internal-201105062148.et151817.hs21-b12-snapshot, mixed mode, sharing)
head of hs_err is:
;; Using jvm: "/export/local/common/jdk/baseline/solaris-sparc/jre/lib/sparc/client/libjvm.so"
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0xfeccfb68, pid=25824, tid=2
#
# JRE version: 7.0-b141
# Java VM: Java HotSpot(TM) Client VM (21.0-b12-internal-201105062148.et151817.hs21-b12-snapshot compiled mode solaris-sparc )
# Problematic frame:
# V [libjvm.so+0x4cfb68] void LinkResolver::runtime_resolve_virtual_method(CallInfo&,methodHandle,KlassHandle,Handle,KlassHandle,bool,Thread*)+0x1ec
#
# Core dump written. Default location: /export/local/49709.HSX.PIT.VM+solaris-sparc_vm__client_compd_nsk.jdi.testlist/results/ResultDir/tc04x001/core or core.25824
#
# If you would like to submit a bug report, please visit:
# http://bugreport.sun.com/bugreport/crash.jsp
#
JDK: Java(TM) SE Runtime Environment (build 1.7.0-ea-b141)
VM: Java HotSpot(TM) Client VM (build 21.0-b12-internal-201105062148.et151817.hs21-b12-snapshot, mixed mode, sharing)
head of hs_err is:
;; Using jvm: "/export/local/common/jdk/baseline/solaris-sparc/jre/lib/sparc/client/libjvm.so"
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0xfeccfb68, pid=25824, tid=2
#
# JRE version: 7.0-b141
# Java VM: Java HotSpot(TM) Client VM (21.0-b12-internal-201105062148.et151817.hs21-b12-snapshot compiled mode solaris-sparc )
# Problematic frame:
# V [libjvm.so+0x4cfb68] void LinkResolver::runtime_resolve_virtual_method(CallInfo&,methodHandle,KlassHandle,Handle,KlassHandle,bool,Thread*)+0x1ec
#
# Core dump written. Default location: /export/local/49709.HSX.PIT.VM+solaris-sparc_vm__client_compd_nsk.jdi.testlist/results/ResultDir/tc04x001/core or core.25824
#
# If you would like to submit a bug report, please visit:
# http://bugreport.sun.com/bugreport/crash.jsp
#
- backported by
-
JDK-2210015 VM crashes in void LinkResolver::runtime_resolve_virtual_method
-
- Closed
-
- duplicates
-
JDK-7043473 JVMTI popframe is broken
-
- Closed
-
-
JDK-7047428 jdb reenter command reports NPE on solaris-sparc
-
- Closed
-
- relates to
-
JDK-7009361 JSR 292 Invalid value on stack on solaris-sparc with -Xcomp
-
- Closed
-